objects/Potential_Acquisition__c.object
<CustomObject>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>SMM</fullName>
                </value>
                <value>
                    <fullName>EEM</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
                <value>
                    <fullName>Planner Tools</fullName>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Rank__c</fullName>
        <label>Company Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Acquisition</relationshipLabel>
        <relationshipName>Potential_Acquisition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Valuation_Estimate__c</fullName>
        <label>Current Valuation (Estimate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EBITDA__c</fullName>
        <label>EBITDA</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Next Event</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTE__c</fullName>
        <label>FTE</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Founded_in__c</fullName>
        <label>Founded in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <label>Growth</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NDA_Expiration__c</fullName>
        <label>NDA Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Signed__c</fullName>
        <label>NDA Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_in_place__c</fullName>
        <label>NDA in place?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue__c</fullName>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Growth_YoY_c__c</fullName>
        <label>Forward Revenue Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>0 - Not Yet Contacted</fullName>
                </value>
                <value>
                    <fullName>1 - Emailed</fullName>
                </value>
                <value>
                    <fullName>2 - Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>3 - Banker Book Received</fullName>
                </value>
                <value>
                    <fullName>4 - Monitor Mode</fullName>
                </value>
                <value>
                    <fullName>5 - Demo Held</fullName>
                </value>
                <value>
                    <fullName>6 - Inperson Meeting</fullName>
                </value>
                <value>
                    <fullName>7 - Preliminary Diligence</fullName>
                </value>
                <value>
                    <fullName>8 - LOI</fullName>
                </value>
                <value>
                    <fullName>9 - Confirmatory Diligence / Drafting</fullName>
                </value>
                <value>
                    <fullName>10 - Integration</fullName>
                </value>
                <value>
                    <fullName>11 - Passed after Initial Review / No Monitor</fullName>
                </value>
                <value>
                    <fullName>12 - Walked after Diligence / Monitor</fullName>
                </value>
                <value>
                    <fullName>13 - Valuation too High   Deal Done</fullName>
                </value>
                <value>
                    <fullName>14 - Valuation too High  Deal Not Announced / Monitor</fullName>
                </value>
                <value>
                    <fullName>15 - Competitor</fullName>
                </value>
                <value>
                    <fullName>16 - Acquired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub-Sector</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Funding__c</fullName>
        <label>Total Funding</label>
        <summarizedField>Funding_Round__c.Amount__c</summarizedField>
        <summaryForeignKey>Funding_Round__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Potential Acquisition</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential Acquisition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MS</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Stage__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <label>MS</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Potential_Acqisition</fullName>
        <active>true</active>
        <label>Potential Acqisition</label>
    </recordTypes>
</CustomObject>